# hive-wasm

./: .gitignore  .hive.yaml  .travis.yml  Makefile  Package.swift  README.md  go.mod  go.sum
.build/: debug  debug.yaml  manifest.db
.build/wasm32-unknown-wasi/: build.db
.build/wasm32-unknown-wasi/debug/: description.json  suborbital.swiftmodule  suborbital.swiftsourceinfo
.build/wasm32-unknown-wasi/debug/suborbital.build/: master.swiftdeps  output-file-map.json
.github/workflows/: sanity.yml
api/rust/suborbital/: Cargo.toml
api/rust/suborbital/src/: lib.rs
api/swift/suborbital/: README.md
bundle/: bundle_test.go
bundle/bundlewritetester/: main.go
directive/: directive.go  directive_test.go
helloworld-rs/: README.md  run.rs
hivew/: main.go  root.go
hivew/command/: build.go  create.go
hivew/context/: buildcontext.go
hivew/release/: version.go
hivew/util/: zip.go  zip_test.go
request/: request.go
rs-builder/: Dockerfile  build.sh
rs-builder/src/: run.rs
wasm/: api_cache.go  api_http.go  api_log.go  api_request.go  api_result.go  bundle.go  bundle_test.go  context.go  environment.go  ffi.go  ffi_environment.go  wasm_test.go  wasmbench_test.go  wasmrunnable.go
wasm/bundlewritetester/: main.go
wasm/testdata/: Directive.yaml  helloworld-rs.wasm  hivew_rs_builder.wasm
wasm/testdata/fetch/: fetch.wasm
wasm/testdata/hello-echo/: hello-echo.wasm
wasm/testdata/log/: log.wasm
wasm/testdata/rust-get/: rust-get.wasm
wasm/testdata/rust-set/: rust-set.wasm
wasm/testdata/swift-echo/: .runnable.yaml  Package.swift
(+50 files in other folders)
