[package]
name = "suborbital"
version = "0.4.4"
authors = ["cohix <connorjhicks@gmail.com>"]
edition = "2018"
description = "Suborbital Wasm FFI API"
license = "Apache-2.0"
repository = "https://github.com/suborbital/hive-wasm"
homepage = "https://suborbital.dev"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
